# FirstRun

./: README.md  pyproject.toml
runcheck/: __init__.py  cli.py  github.py  models.py  scoring.py
runcheck/detectors/: __init__.py  docker_project.py  env_project.py  make_project.py  node_project.py  python_project.py  shell_project.py
runcheck/report/: __init__.py  console.py  json_output.py
runcheck/rules/: __init__.py  container_available.py  missing_env_example.py  missing_readme.py  missing_run_instructions.py  missing_start_method.py  readme_command_mismatch.py  readme_file_mismatch.py
runcheck/scanner/: __init__.py  context.py  files.py  readme.py
tests/: test_github.py  test_rules.py  test_scanner.py
